[package]
name = "shush"
version = "0.1.0"
edition = "2021"

[dependencies]
zeroize = "1.8.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"
errno = "0.3.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = [
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System",
    "Win32_System_Diagnostics_Debug_Extensions",
] }
