[package]
name = "shush-rs"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust crate designed to manage sensitive data securely by leveraging memory protection mechanisms."
repository = "https://github.com/Eyob94/shush-rs"
readme = "README.md"
keywords = ["secret", "memory", "protection", "privacy"]
categories = ["memory-management"]
exclude = [".github/"]

[dependencies]
zeroize = "1.8.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"
errno = "0.3.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = [
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System",
    "Win32_System_Diagnostics_Debug_Extensions",
] }

[profile.release]
panic = "abort"
